# 3DAVis

./: .gitignore  .gitmodules  3DAvisMain.cpp  CMakeLists.txt  Controller.h  Converter.cpp  Converter.h  FileManager.cpp  FileManager.h  HDF53DConstructor.cpp  HDF53DConstructor.h  HDF5Reader.cpp  HDF5Reader.h  LogKeeper.cpp  LogKeeper.h  Maintest.cpp  MipMap.cpp  MipMap.h  MipMapUtil.cpp  MipMapUtil.h  README.md  Readme.md  Test.cpp  VtkVisul.cpp  VtkVisul.h
Client/: Readme.md  package-lock.json
Client/3davis-web-app/: README.md  package-lock.json  package.json
Client/3davis-web-app/src/: App.vue  main.js
Client/3davis-web-app/src/components/: ControlPanelComponent.vue  FileSelectorComponent.vue  HelloWorld.vue  ImageComponent.vue  VTKImageComponent.vue  VTKVolumeComponent.vue  fileSelectorComponent.vue
Client/3davis-web-app/zfp_wrapper/: build_zfp.sh  build_zfp_wrapper.sh  post.ts  typings.d.ts
Client/client-web-app/: README.md  package-lock.json  package.json  standalone.html  standalone2.html  vue.config.js
Client/client-web-app/src/: App.vue  main.js
Client/client-web-app/src/components/: NavBarComponent.vue  PromiseComponent.vue  StreamComponent.vue  VTKImageComponent.vue  VTKRenderingTestComponent.vue  VTKStandaloneComponent.vue  VTKStandaloneVolumeComponent.vue
Client/zfp_wrapper/: zfp_wrapper.c
Connection Test/: Browser.js  CMakeLists.txt  Client.py  FileManager.cpp  FileManager.h  LogKeeper.cpp  Makefile  Server  Server.cpp  test.html
Connection Test/HDF5Data/: FileList.txt
Converter/: Converter.cpp  Converter.h  MipMap.h  MipMapUtil.cpp  MipMapUtil.h
Server/: 3DAvisMain.cpp  CMakeLists.txt  Compression.cpp  Compression.h  Controller.cpp  Controller.h  FileManager.cpp  FileManager.h  HDF53DConstructor.cpp  HDF53DConstructor.h  HDF5Reader.cpp  HDF5Reader.h  LogKeeper.cpp  LogKeeper.h  Maintest.cpp  Makefile  Readme.md  Server.cpp  Server.h  Tile.cpp  Tile.h  VtkVisul.cpp  VtkVisul.h  base64.cpp
Server/Converter/ConverterAverage/: ConverterMain.cpp  MipMap.cpp  MipMap.h  MipMapUtil.cpp  MipMapUtil.h  Readme.md
Server/Converter/ConverterAverageNoZero/: CMakeLists.txt  Converter.h  MipMap.h  MipMapUtil.cpp  Readme.md
Server/Converter/ConverterMax/: Converter.cpp  Converter.h  ConverterMain.cpp  MipMap.cpp  MipMap.h  MipMapUtil.cpp  MipMapUtil.h  Readme.md
Server/HDF5Data/: FileList.txt
